# BeRich

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: berich.yaml
deploy/: berich-watchdog.service  berich-watchdog.timer
docs/: DEPLOY.md  FORWARD_TEST.md  GATE_REFORM.md  INTRADAY_FEASIBILITY.md  RESULTS.md  VISION.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/brief/: page.tsx
frontend/app/changelog/: page.tsx
frontend/app/components/: BacktestPanel.tsx  CalibrationCard.tsx  DriftPanel.tsx  EquityChart.tsx  HealthFooter.tsx  KeyTerms.tsx  LevelSwitch.tsx  LightView.tsx  LongShortPanel.tsx  Onboarding.tsx  PageIntro.tsx  PaperEquityChart.tsx  PaperPanel.tsx  PendingExitBadge.tsx  RiskProfileSwitch.tsx  Show.tsx  SignalAdvice.tsx  SignalBadge.tsx  SignalsTable.tsx  StrategySwitch.tsx  Term.tsx  TickerChart.tsx  TopNav.tsx  TrainingInfo.tsx  UniverseTabs.tsx  bars.tsx
frontend/app/copy/: page.tsx
frontend/app/how-it-works/: page.tsx
frontend/app/intraday/: page.tsx
frontend/app/lib/: api.ts  format.ts  freshness.ts
frontend/app/ops/: page.tsx
frontend/app/panel/: page.tsx
frontend/app/strategies/: page.tsx
frontend/app/studio/: page.tsx
frontend/app/training/: page.tsx
frontend/app/under-the-hood/: page.tsx
frontend/app/wallet/: page.tsx
scripts/: apply_gate_reform.py  calendar_baseline.py  check_daily_run.py  compare_exit_strategies.py  eval_news.py  exploit_h3.py  feature_importances.py  intraday_status.py  measure_gate_impact.py  pead_risk_managed.py  portfolio_sweep.py  run_full_sweep.py  sweep_horizon_per_asset.py  sweep_horizons.py  sweep_labels.py  sweep_universe.py  sweep_zoo.py  train_intraday_btc.py  train_longshort.py  train_lstm.py  train_pead.py  train_zoo.py  verify_sync.sh
src/berich/: __init__.py  backup.py  cli.py  config.py  ops.py
src/berich/api/: __init__.py  app.py
src/berich/backtest/: __init__.py  annualization.py  engine.py  longshort.py  metrics.py  multiple_testing.py  pead_engine.py  portfolio.py  significance.py  strategies.py
src/berich/data/: __init__.py  earnings.py  ingest.py  news.py  store.py
src/berich/datasets/: __init__.py  assemble.py  cross_sectional.py  pead.py  scaling.py  splits.py  windows.py
src/berich/features/: __init__.py  build.py  earnings_features.py  fundamental_features.py  indicators.py  microstructure.py  news_features.py  pead_features.py  volatility.py
src/berich/labeling/: __init__.py  cross_sectional.py  pead.py  triple_barrier.py
src/berich/models/: __init__.py  base.py  chronos_scorer.py  ensemble.py  finbert_scorer.py  lightgbm_model.py  lightgbm_ranker.py  lstm.py  meta_labeler.py  patchtst.py  registry.py  sequence_base.py  sequence_ranker.py  tft.py
src/berich/monitoring/: __init__.py  drift.py
src/berich/notifications/: __init__.py  digest.py  email.py  video_script.py
src/berich/risk/: __init__.py  gating.py  sizing.py  sizing_strategy.py
src/berich/scheduler/: __init__.py  jobs.py  runner.py
src/berich/signals/: __init__.py  calibration.py  longshort_service.py  paper.py  paper_intraday.py  (+2 more)
tests/: test_annualization.py  test_api.py  test_asset_class.py  test_backtest.py  test_backup.py  test_binance_adapter.py  test_calibration_meta.py  test_chronos.py  test_config.py  test_config_intraday.py  test_cross_sectional.py  test_crosscheck.py  test_datasets.py  test_earnings_features.py  test_ensemble.py  test_features.py  test_features_intraday.py  test_fundamentals.py  test_gpu_pool.py  test_hpo.py  test_ingest.py  test_intraday_signals.py  test_intraday_walkforward.py  test_labeling.py  test_longshort.py  test_longshort_service.py  test_microstructure.py  test_monitoring.py  test_multiple_testing.py  test_news_features.py  test_notifications.py  test_ops.py  test_optimized_serving.py  test_paper.py  test_paper_intraday.py  test_pead.py  test_polish_v2.py  test_portfolio.py  test_promotion_fdr.py  test_registry.py  (+14 more)
(+18 files in other folders)
