[project]
name = "berich"
version = "0.4.0"
description = "Personal swing-trading advisory tool — ML trend-probability signals over US daily equities"
readme = "README.md"
authors = [
    { name = "Jerome LAVAL", email = "jerome0laval@gmail.com" }
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "ccxt>=4.4,<5",
    "duckdb>=1.5.3",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "lightgbm>=4.6.0",
    "lxml>=6.1.1",
    "pandas>=2.2,<4",
    "pyarrow>=14,<24",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.48.0",
    "yfinance>=1.4.0",
]

[project.scripts]
berich = "berich.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["berich*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "COM812", "ISC001", "ANN401", "PLR0913", "TD", "FIX"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106", "PLR2004", "ANN", "INP001", "PT018", "SLF001"]
# CLI uses lazy imports inside subcommands to keep `berich data` startup fast.
"src/berich/cli.py" = ["PLC0415"]
# Lazy ML imports for fast startup; FastAPI Query/Header defaults are idiomatic.
"src/berich/api/app.py" = ["PLC0415", "FAST002"]
# Inline-styled HTML email templates: markup lines legitimately exceed the 100-col cap.
"src/berich/notifications/email.py" = ["E501"]
# One-off scripts: prints are the output mechanism; not a Python package. Imports happen
# after the sys.path bootstrap, so they can't be top-level.
"scripts/*" = ["T201", "INP001", "PLC0415"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ty.environment]
python-version = "3.12"

# Local + Mac sync only; pandas 3 / mlflow constraints make win32 unresolvable today.
[tool.uv]
environments = [
    "sys_platform == 'linux'",
    "sys_platform == 'darwin'",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
    "ty>=0.0.40",
]
gpu = [
    "lightning>=2.6.5",
    "mlflow>=2.20,<4",
    "optuna>=4.8.0",
    "pytorch-forecasting>=1.7.0",
    "torch>=2.12.0",
    "transformers>=5.9.0",
]
